--- a/Starter_Code/PyCitySchools/PyCitySchools_starter.ipynb
+++ b/Starter_Code/PyCitySchools/PyCitySchools_starter.ipynb
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -185,37 +185,26 @@
        "15"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculate the total number of unique schools\n",
-    "school_count = \n",
-    "school_count"
+    "school_count = school_data_complete[\"school_name\"].unique()\n",
+    "school_count = len(school_count)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "39170"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Calculate the total number of students\n",
-    "student_count = \n",
-    "student_count"
+    "student_count = school_data_complete[\"student_name\"].unique()\n",
+    "student_count = len(student_count)"
    ]
   },
   {
@@ -2620,7 +2609,7 @@
    "name": "python3"
   },
   "kernelspec": {
-   "display_name": "PythonData",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -2634,7 +2623,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.13"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -2659,7 +2648,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "5384d77d82de63fd599f73e77f9ec786e7719288bf80a29ec0288c670ac3cf32"
+    "hash": "68e77a2019630c844ad2ed089cfeaa1ff41081e574fef0e7734cace63a14be5f"
    }
   }
  },
